--- a/PHIE/package.json
+++ b/PHIE/package.json
@@ -16,6 +16,7 @@
     "minimatch": "^3.0.2",
     "mkdirp": "^0.5.1",
     "multer": "^1.3.0",
+    "n-readlines": "^0.2.8",
     "path": "^0.12.7",
     "unzip": "^0.1.11"
   }
